--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -9,15 +9,15 @@
 <tr>
 	<th>name</th>
 	<th>fullname</th>
-	<th>author</th>
-	<th>description length</th>
+	<!-- <th>author</th> -->
+	<th>releases</th>
 </tr>
 #{list modules, as:'module'}
 	<tr>
 		<td>${module.name}</td>
 		<td>${module.fullname}</td>
-		<td>${module.author}</td>
-		<td>${module.description.size()}</td>
+		<!-- <td>${module.author}</td> -->
+		<td>${module.releases.join(', ')}</td>
 	</tr>
 #{/list}
 </table>
