Change description from Textile to Markdown

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
         <meta charset="${_response_encoding}">
 		#{stylesheet 'main.css'/}
     </head>
-    <body>
+    <body class="${request.actionMethod}">
         #{doLayout /}
     </body>
 </html>
